# paymantohidifar.github.io

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
content/: about.md  cv.yaml  projects.yaml
content/blogs/: aixbio-first-impressions.md  clustering.md  epi2me-wsl.md  git-submodules.md  jax-ai-stack.md  pca.md  skip-gram-neg-sampling.md  statistical_tests.md  vst.md  welcome-to-my-blog.md
frontend/: vite.config.js
frontend/src/: main.js  style.css
src/portfolio/: compiler.py
src/portfolio/templates/: about.html  base.html  blog_post.html  blogs.html  cv.html  projects.html
tests/: test_compiler.py
