[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio"
version = "0.1.0"
description = "A minimalist Python-compiled static portfolio website"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Payman Tohidifar", email = "payman.tohidifar@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio"]